# verantyx-cortex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  JCross_v4_Specification_JA.md  README.md  RONIN.md  USAGE.md  bench_v7_1_puzzle_runner.py  bench_v7_runner.py  debug_ls20.py  main.py  package-lock.json  package.json  push_rust_to_github.py  push_to_github.py  reddit_post_rrust.md  ronin.mjs  ronin.toml  test_planner.py  tsconfig.json  verantyx-start.sh  verantyx.md
.openclaw/: config.json
verantyx-browser/: .gitignore  Cargo.toml  README.md  ronin.toml
verantyx-browser/.ronin/: .baseline_scanned  agent_config.json  crucible_3d.html  dynamic_aliases.json  experience.jcross  intent.jcross  nightwatch_queue.json  stealth.jcross  timeline.md  vera_memory.html
verantyx-browser/.ronin/jcross_v4/: mem_20260410_020300_edit_intent.jcross  mem_20260410_020538_edit_intent.jcross  mem_20260410_020559_qwen_exec.jcross  mem_20260411_052348_edit_intent.jcross  mem_20260411_052431_qwen_exec.jcross  mem_20260411_052634_edit_intent.jcross  mem_20260411_052748_qwen_exec.jcross  mem_20260411_052939_final_answer.jcross  tm_01802f1eff3b.jcross  tm_022d4b55097c.jcross  tm_03b85fedcebe.jcross  tm_040997f1dbf8.jcross  tm_042d76159453.jcross  tm_047ffa3231c6.jcross  tm_04cdabd4c29a.jcross  tm_050587aa7783.jcross  tm_07e655a7fd92.jcross  tm_08cb60c202da.jcross  tm_08eed2ff469e.jcross  tm_0902562683ee.jcross  tm_0991a108b0f2.jcross  tm_099aded01b73.jcross  tm_09e7ba27a426.jcross  tm_0a27f3657c5e.jcross  tm_0a6ce3b841a2.jcross  tm_0adc4f144368.jcross  tm_0b20bc9c06a0.jcross  tm_0b471bcadb13.jcross  tm_0c649fcbc12e.jcross  tm_0c70a109fa95.jcross  tm_0d06c6d8e303.jcross  tm_0d61dd0628a8.jcross  tm_0e47834da897.jcross  tm_0eddbef3bfa0.jcross  tm_0ef39272a731.jcross  tm_0f50395b2005.jcross  tm_10c681e5cad5.jcross  tm_121f516aaa44.jcross  tm_12361a70b268.jcross  tm_123e7f851048.jcross  (+477 more)
verantyx-browser/.ronin/memory/front/: project_seed.md  purethrough_map.md
verantyx-browser/crates/ronin-core/: Cargo.toml
verantyx-browser/crates/ronin-hive/: Cargo.toml
(+195 files in other folders)
